# xsql

./: .gitignore  .gitmodules  CMakeLists.txt
include/: CommonRepository.h  EntityBase.h  IRepositoryBase.h  QueryCondition.h  QueryResult.h  SqlConnection.h  SqlDefine.h  SqlException.h  SqlExecutor.h  SqlQuery.h  SqlResult.h  SqlType.h  SqlValue.h  TableBase.h  utils.h  xsql.h
include/db_type/mysql/: MysqlConnection.h  MysqlExecutor.h
include/db_type/sqlite/: SqliteConnection.h
include/utils/: Debug.h  Format.h  ValueConvert.h  utils.h
src/: QueryCondition.cpp  QueryResult.cpp  SqlConnection.cpp  SqlDefine.cpp  SqlQuery.cpp  SqlResult.cpp  SqlType.cpp  SqlValue.cpp  TableBase.cpp  ValueConvert.cpp  utils.cpp
src/db_type/mysql/: MysqlConnection.cpp  MysqlExecutor.cpp
src/db_type/sqlite/: SqliteConnection.cpp
test/: CMakeLists.txt  a.out  main.cpp  test_convert.cpp  test_create_table.cpp  test_repository.cpp  test_sql_type.cpp  test_xsql.cpp
